syntax = "proto3";

option csharp_namespace = "Artemis.Service.Protos.School";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";

package Artemis.Service.Protos.School;

// 学校服务
service SchoolService{

	// 查询学校信息
	rpc SearchSchoolInfo(SearchSchoolReqeust) returns (SearchSchoolInfoResponse){
		option (google.api.http) = {
			get: "/api/SchoolService/Schools"
		};
	}

	// 读取学校信息
	rpc ReadSchoolInfo(ReadSchoolInfoRequest) returns (ReadSchoolInfoResponse){
		option (google.api.http) = {
			get: "/api/SchoolService/Schools/{SchoolId}"
		};
	}

	// 创建学校
	rpc CreateSchool(CreateSchoolRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/SchoolService/Schools"
			body: "*"
		};
	}

	// 批量创建学校
	rpc BatchCreateSchool(BatchCreateSchoolRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/SchoolService/Schools/BatchCreate"
			body: "Batch"
		};
	}

	// 更新学校
	rpc UpdateSchool(UpdateSchoolRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/SchoolService/Schools/{SchoolId}"
			body: "School"
		};
	}

	// 批量更新学校
	rpc BatchUpdateSchool(BatchUpdateSchoolRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/SchoolService/Schools/BatchUpdate"
			body: "Batch"
		};
	}

	// 删除学校
	rpc DeleteSchool(DeleteSchoolRequest) returns (AffectedResponse){
		option (google.api.http) = {
			delete: "/api/SchoolService/Schools/{SchoolId}"
		};
	}

	// 批量删除学校
	rpc BatchDeleteSchool(BatchDeleteSchoolRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/SchoolService/Schools/BatchDelete"
			body: "SchoolIds"
		};
	}

	// 查询学校班级信息
	rpc SearchSchoolClassInfo(SearchSchoolClassInfoReqeust) returns (SearchSchoolClassInfoResponse){
		option (google.api.http) = {
			get: "/api/SchoolService/Schools/{SchoolId}/Classes"
		};
	}

	// 获取学校班级信息
	rpc ReadSchoolClassInfo(ReadSchoolClassInfoRequest) returns (ReadSchoolClassInfoResponse){
		option (google.api.http) = {
			get: "/api/SchoolService/Schools/{SchoolId}/Classes/{ClassId}"
		};
	}

	// 创建学校班级
	rpc CreateSchoolClass(CreateSchoolClassRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/SchoolService/Schools/{SchoolId}/Classes"
			body: "Class"
		};
	}

	// 批量创建学校班级
	rpc BatchCreateSchoolClass(BatchCreateSchoolClassRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/SchoolService/Schools/{SchoolId}/Classes/BatchCreate"
			body: "Batch"
		};
	}

	// 更新学校班级
	rpc UpdateSchoolClass(UpdateSchoolClassRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/SchoolService/Schools/{SchoolId}/Classes/{ClassId}"
			body: "Class"
		};
	}

	// 批量更新学校班级
	rpc BatchUpdateSchoolClass(BatchUpdateSchoolClassRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/SchoolService/Schools/{SchoolId}/Classes/BatchUpdate"
			body: "Batch"
		};
	}

	// 删除学校班级
	rpc DeleteSchoolClass(DeleteSchoolClassRequest) returns (AffectedResponse){
		option (google.api.http) = {
			delete: "/api/SchoolService/Schools/{SchoolId}/Classes/{ClassId}"
		};
	}

	// 批量删除学校班级
	rpc BatchDeleteSchoolClass(BatchDeleteSchoolClassRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/SchoolService/Schools/{SchoolId}/Classes/BatchDelete"
			body: "ClassIds"
		};
	}

}

// 查询学校信息请求
message SearchSchoolReqeust{
	// 学校名称
	// @maxLength(128)
	google.protobuf.StringValue Name = 1;
	// 学校代码
	// @maxLength(128)
	google.protobuf.StringValue Code = 2;
	// 学校类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 3;
	// 组织机构代码
	// @maxLength(128)
	google.protobuf.StringValue OrganizationCode = 4;
	// 行政区划编码
	// @maxLength(32)
	google.protobuf.StringValue DivisionCode = 5;
	// 页码
	// @min(0)
	google.protobuf.Int32Value Page = 6;
	// 条目数
	// @min(0)
	google.protobuf.Int32Value Size = 7;
}

// 学校信息数据包
message SchoolInfoPacket {
	// 学校标识
	// @required
	// @guid
	string Id = 1;
	// 学校名称
	// @required
	// @maxLength(128)
	string Name = 2;
	// 学校代码
	// @maxLength(128)
	google.protobuf.StringValue Code = 3;
	// 学校代码
	// @maxLength(64)
	google.protobuf.StringValue BindingTag = 4;
	// 学校类型
	// @maxLength(128)
	google.protobuf.StringValue Type = 5;
	// 组织机构代码
	// @maxLength(128)
	google.protobuf.StringValue OrganizationCode = 6;
	// 行政区划编码
	// @maxLength(32)
	google.protobuf.StringValue DivisionCode = 7;
	// 学校地址
	// @maxLength(128)
	google.protobuf.StringValue Address = 8;
	// 邮箱
	// @maxLength(128)
	google.protobuf.StringValue Email = 9;
	// 网址
	// @maxLength(128)
	google.protobuf.StringValue Website = 10;
	// 学校联系电话
	// @maxLength(32)
	google.protobuf.StringValue ContactNumber = 11;
	// 创建时间
	// @datetime
	google.protobuf.StringValue EstablishTime = 12;
	// 学校简介
	// @maxLength(512)
	google.protobuf.StringValue Introduction = 13;
	// 备注
	// @maxLength(128)
	google.protobuf.StringValue Remark = 14;
}

// 分页学校信息数据包
message PageSchoolInfoPacket {
	// 页码
	// @min(0)
	int32 Page = 1;
	// 条目数
	// @min(0)
	int32 Size = 2;
	// 数据总数
	// @min(0)
	int64 Total = 3;
	// 条件过滤后的数据量
	// @min(0)
	int64 Count = 4;
	// 学校信息数据
	// @required
	repeated SchoolInfoPacket Items = 5;
}

// 查询学校信息响应
message SearchSchoolInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
    // 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 学校信息数据
	// @required
	PageSchoolInfoPacket Data = 7;
}

// 获取学校信息请求
message ReadSchoolInfoRequest{
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
}

// 获取学校信息响应
message ReadSchoolInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
	// 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 学校信息数据
	// @required
	SchoolInfoPacket Data = 7;
}

// 创建学校请求
message CreateSchoolRequest {
	// 学校名称
	// @required
	// @maxLength(128)
	string Name = 1;
	// 学校代码
	// @maxLength(128)
	google.protobuf.StringValue Code = 2;
	// 学校代码
	// @maxLength(64)
	google.protobuf.StringValue BindingTag = 3;
	// 学校类型
	// @maxLength(128)
	google.protobuf.StringValue Type = 4;
	// 组织机构代码
	// @maxLength(128)
	google.protobuf.StringValue OrganizationCode = 5;
	// 行政区划编码
	// @maxLength(32)
	google.protobuf.StringValue DivisionCode = 6;
	// 学校地址
	// @maxLength(128)
	google.protobuf.StringValue Address = 7;
	// 邮箱
	// @maxLength(128)
	google.protobuf.StringValue Email = 8;
	// 网址
	// @maxLength(128)
	google.protobuf.StringValue Website = 9;
	// 学校联系电话
	// @maxLength(32)
	google.protobuf.StringValue ContactNumber = 10;
	// 创建时间
	// @datetime
	google.protobuf.StringValue EstablishTime = 11;
	// 学校简介
	// @maxLength(512)
	google.protobuf.StringValue Introduction = 12;
	// 备注
	// @maxLength(128)
	google.protobuf.StringValue Remark = 13;
}

// 批量创建学校请求
message BatchCreateSchoolRequest {
	// 学校信息数据
	// @required
	repeated CreateSchoolRequest Batch = 1;
}

// 更新学校数据包
message UpdateSchoolPacket {
	// 学校名称
	// @maxLength(128)
	google.protobuf.StringValue Name = 1;
	// 学校代码
	// @maxLength(128)
	google.protobuf.StringValue Code = 2;
	// 学校代码
	// @maxLength(64)
	google.protobuf.StringValue BindingTag = 3;
	// 学校类型
	// @maxLength(128)
	google.protobuf.StringValue Type = 4;
	// 组织机构代码
	// @maxLength(128)
	google.protobuf.StringValue OrganizationCode = 5;
	// 行政区划编码
	// @maxLength(32)
	google.protobuf.StringValue DivisionCode = 6;
	// 学校地址
	// @maxLength(128)
	google.protobuf.StringValue Address = 7;
	// 邮箱
	// @maxLength(128)
	google.protobuf.StringValue Email = 8;
	// 网址
	// @maxLength(128)
	google.protobuf.StringValue Website = 9;
	// 学校联系电话
	// @maxLength(32)
	google.protobuf.StringValue ContactNumber = 10;
	// 创建时间
	// @datetime
	google.protobuf.StringValue EstablishTime = 11;
	// 学校简介
	// @maxLength(512)
	google.protobuf.StringValue Introduction = 12;
	// 备注
	// @maxLength(128)
	google.protobuf.StringValue Remark = 13;
}

// 更新学校请求
message UpdateSchoolRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 学校信息数据
	// @required
	UpdateSchoolPacket School = 2;
}

// 批量更新学校请求
message BatchUpdateSchoolRequest {
	// 学校信息数据
	// @required
	repeated UpdateSchoolRequest Batch = 1;
}

// 删除学校请求
message DeleteSchoolRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
}

// 批量删除学校
message BatchDeleteSchoolRequest {
	// 学校标识
	// @required
	// @guid
	repeated string SchoolIds = 1;
}

// 查询学校班级请求
message SearchSchoolClassInfoReqeust{
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级名称
	// @maxLength(32)
	google.protobuf.StringValue Name = 2;
	// 班级代码
	// @maxLength(32)
	google.protobuf.StringValue Code = 3;
	// 年级
	// @maxLength(32)
	google.protobuf.StringValue GradeName = 4;
	// 类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 5;
	// 学段
	// @maxLength(32)
	google.protobuf.StringValue StudyPhase = 6;
	// 学制
	// @maxLength(32)
	google.protobuf.StringValue SchoolLength = 7;
	// 页码
	// @min(0)
	google.protobuf.Int32Value Page = 8;
	// 条目数
	// @min(0)
	google.protobuf.Int32Value Size = 9;
}

// 班级信息数据包
message SchoolClassInfoPacket {
	// 班级标识
	// @required
	// @guid
	string Id = 1;
	// 学校标识
	// @required
	// @guid
	string SchoolId = 2;
	// 班主任标识
	// @guid
	google.protobuf.StringValue HeadTeacherId = 3;
	// 班主任姓名
	// @maxLength(32)
	google.protobuf.StringValue HeadTeacherName = 4;
	// 班级名称
	// @maxLength(32)
	google.protobuf.StringValue Name = 5;
	// 年级名称
	// @maxLength(32)
	google.protobuf.StringValue GradeName = 6;
	// 班级类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 7;
	// 所学专业
	// @maxLength(128)
	google.protobuf.StringValue Major = 8;
	// 班级编码
	// @maxLength(32)
	google.protobuf.StringValue Code = 9;
	// 学段
	// @maxLength(32)
	google.protobuf.StringValue StudyPhase = 10;
	// 学制
	// @maxLength(32)
	google.protobuf.StringValue SchoolLength = 11;
	// 学制长度
	// @required
	// @maxLength(32)
	int32 Length = 12;
	// 班级序号
	// @required
	// @maxLength(32)
	int32 SerialNumber = 13;
	// 班级创建时间
	// @datetime
	google.protobuf.StringValue EstablishTime = 14;
	// 备注
	// @maxLength(128)
	google.protobuf.StringValue Remark = 15;
}

// 分页班级信息数据包
message PageSchoolClassInfoPacket {
	// 页码
	// @min(0)
	int32 Page = 1;
	// 条目数
	// @min(0)
	int32 Size = 2;
	// 数据总数
	// @min(0)
	int64 Total = 3;
	// 条件过滤后的数据量
	// @min(0)
	int64 Count = 4;
	// 班级信息数据
	// @required
	repeated SchoolClassInfoPacket Items = 5;
}

// 查询学校班级信息响应
message SearchSchoolClassInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
	// 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 班级信息数据
	// @required
	PageSchoolClassInfoPacket Data = 7;
}

// 获取学校班级信息请求
message ReadSchoolClassInfoRequest{
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级标识
	// @required
	// @guid
	string ClassId = 2;
}

// 获取学校班级信息响应
message ReadSchoolClassInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
	// 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 班级信息数据
	// @required
	SchoolClassInfoPacket Data = 7;
}

// 创建学校班级数据包
message CreateSchoolClassPacket {
	// 班主任标识
	// @guid
	google.protobuf.StringValue HeadTeacherId = 1;
	// 班主任姓名
	// @maxLength(32)
	google.protobuf.StringValue HeadTeacherName = 2;
	// 班级名称
	// @maxLength(32)
	google.protobuf.StringValue Name = 3;
	// 年级名称
	// @maxLength(32)
	google.protobuf.StringValue GradeName = 4;
	// 班级类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 5;
	// 所学专业
	// @maxLength(128)
	google.protobuf.StringValue Major = 6;
	// 班级编码
	// @maxLength(32)
	google.protobuf.StringValue Code = 7;
	// 学段
	// @maxLength(32)
	google.protobuf.StringValue StudyPhase = 8;
	// 学制
	// @maxLength(32)
	google.protobuf.StringValue SchoolLength = 9;
	// 学制长度
	// @required
	// @maxLength(32)
	int32 Length = 10;
	// 班级序号
	// @required
	// @maxLength(32)
	int32 SerialNumber = 11;
	// 班级创建时间
	// @datetime
	google.protobuf.StringValue EstablishTime = 12;
	// 备注
	// @maxLength(128)
	google.protobuf.StringValue Remark = 13;
}

// 创建学校班级请求
message CreateSchoolClassRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级信息数据
	// @required
	CreateSchoolClassPacket Class = 2;
}

// 批量创建学校班级请求
message BatchCreateSchoolClassRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级信息数据
	// @required
	repeated CreateSchoolClassPacket Batch = 2;
}

// 更新学校数据包
message UpdateSchoolClassPacket {
	// 班主任标识
	// @guid
	google.protobuf.StringValue HeadTeacherId = 1;
	// 班主任姓名
	// @maxLength(32)
	google.protobuf.StringValue HeadTeacherName = 2;
	// 班级名称
	// @maxLength(32)
	google.protobuf.StringValue Name = 3;
	// 年级名称
	// @maxLength(32)
	google.protobuf.StringValue GradeName = 4;
	// 班级类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 5;
	// 所学专业
	// @maxLength(128)
	google.protobuf.StringValue Major = 6;
	// 班级编码
	// @maxLength(32)
	google.protobuf.StringValue Code = 7;
	// 学段
	// @maxLength(32)
	google.protobuf.StringValue StudyPhase = 8;
	// 学制
	// @maxLength(32)
	google.protobuf.StringValue SchoolLength = 9;
	// 学制长度
	// @maxLength(32)
	google.protobuf.Int32Value Length = 10;
	// 班级序号
	// @maxLength(32)
	google.protobuf.Int32Value SerialNumber = 11;
	// 班级创建时间
	// @datetime
	google.protobuf.StringValue EstablishTime = 12;
	// 备注
	// @maxLength(128)
	google.protobuf.StringValue Remark = 13;
}

// 更新学校班级请求
message UpdateSchoolClassRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级标识
	// @required
	// @guid
	string ClassId = 2;
	// 班级信息数据
	// @required
	UpdateSchoolClassPacket Class = 3;
}

// 批量更新学校班级数据包
message BatchUpdateSchoolClassPacket {
	// 班级标识
	// @required
	// @guid
	string ClassId = 1;
	// 班级信息
	// @required
	UpdateSchoolClassPacket Class = 2;
}

// 批量更新学校班级请求
message BatchUpdateSchoolClassRequest {
	// 班级标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级信息数据
	// @required
	repeated BatchUpdateSchoolClassPacket Batch = 2;
}

// 删除学校班级请求
message DeleteSchoolClassRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级标识
	// @required
	// @guid
	string ClassId = 2;
}

// 批量删除学校班级
message BatchDeleteSchoolClassRequest {
	// 学校标识
	// @required
	// @guid
	string SchoolId = 1;
	// 班级标识
	// @required
	// @guid
	repeated string ClassIds = 2;
}